# jupythunder2

./: .gitignore  AGENT.md  README.md  ascii.md  main.py  pyproject.toml
codes/: 09201529.ipynb  09201529.md
jupythunder2/: __init__.py  ascii_art.py  cli.py  config.py  history.py
jupythunder2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jupythunder2/agent/: __init__.py  llm.py  orchestrator.py  planning.py
jupythunder2/assets/: __init__.py
jupythunder2/debugging/: __init__.py  suggestions.py
jupythunder2/kernel/: __init__.py  executor.py
jupythunder2/llm/: provider.py
jupythunder2/runtime/: kernel.py
jupythunder2/store/: codebook.py  session.py
jupythunder2/tui/: animation.py  repl.py
jupythunder2/workflows/: __init__.py  models.py  runner.py  storage.py
runs/20250920-115409/: events.jsonl
runs/20250920-120604/: events.jsonl
runs/20250920-120638/: events.jsonl
runs/20250920-120648/: events.jsonl
runs/20250920-121306/: events.jsonl
runs/20250920-152931/: events.jsonl
tests/: test_agent_parser.py  test_cli.py  test_codebook_logger.py  test_config.py  test_debugging.py  test_kernel_executor.py  test_planning_agent.py  test_session.py  test_session_store.py  test_workflows.py
