[project]
name = "jupythunder2"
version = "0.1.0"
description = "CLI-native agentic notebook coding companion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3",
    "prompt-toolkit>=3.0.43",
    "rich>=13.7.0",
    "jupyter-client>=8.6.0",
    "pydantic>=2.7.0",
    "ollama>=0.1.8",
    "ipykernel>=6.29.0",
    "pytest>=8.4.2",
    "pandas>=2.3.2",
    "nbformat>=5.10.0",
    "scikit-learn>=1.7.2",
]

[project.scripts]
jt2 = "jupythunder2.cli:entrypoint"

[tool.typer]
completions = false

[tool.setuptools.packages.find]
include = ["jupythunder2*"]

[tool.setuptools.package-data]
"jupythunder2" = ["assets/*.txt"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
